--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-
+# AQI Prediction
+To develop a machine learning model that can predict air quality in urban areas. The project involves various stages, including exploratory data analysis (EDA), training a machine learning model, and saving the model for future use
